Projeto_Compilador/src/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CASE
    CONST
    FILE
    GOTO
    IN
    KEYWORD
    LABEL
    MULTILINECOMMENTS
    NIL
    ONELINECOMMENTS
    PACKED
    RECORD
    REPEAT
    SET
    TYPE
    UNTIL
    WITH

Grammar

Rule 0     S' -> Programa
Rule 1     Condicao -> Condicao AND Condicao
Rule 2     Condicao -> Condicao OR Condicao
Rule 3     Condicao -> NOT Condicao
Rule 4     Condicao -> DeclaracaoCondicao
Rule 5     Condicao -> ( Condicao )
Rule 6     LocalInstsList -> LocalInstsList ; Instrucao
Rule 7     Dvariaveis -> VAR Listavariaveis
Rule 8     Programa -> PROGRAM ID ; Duses GlobalInsts BlocoPrincipal .
Rule 9     Duses -> USES UseList ;
Rule 10    Duses -> <empty>
Rule 11    Expressao -> Expressao + Termo
Rule 12    Expressao -> Expressao - Termo
Rule 13    InstrucaoCondicional -> IF Condicao THEN BlocoCondicional ParteElse
Rule 14    Acesso_array -> Variavel_array [ Expressao ]
Rule 15    Atribuicao -> Atribuido ASSIGN Expressao
Rule 16    Dfuncao -> FuncDec BufferVar BEGIN LocalInstsList END ;
Rule 17    LocalInstsList -> LocalInstsList ;
Rule 18    Listavariaveis -> Listavariaveis Variaveis : Tipo ;
Rule 19    Listavariaveis -> <empty>
Rule 20    UseList -> UseList , ID
Rule 21    UseList -> ID
Rule 22    While -> WHILE Condicao DO Instrucao
Rule 23    LocalInstsList -> Instrucao
Rule 24    Instrucao -> While
Rule 25    Instrucao -> CicloFor
Rule 26    Instrucao -> InstrucaoCondicional
Rule 27    Instrucao -> Atribuicao
Rule 28    Instrucao -> Expressao
Rule 29    GlobalInsts -> GlobalInsts GlobalInst
Rule 30    GlobalInsts -> <empty>
Rule 31    DeclaracaoCondicao -> Expressao SimboloCondicional Expressao
Rule 32    DeclaracaoCondicao -> Expressao
Rule 33    BlocoCondicional -> Instrucao
Rule 34    Expressao -> Termo
Rule 35    GlobalInst -> Dfuncao
Rule 36    GlobalInst -> Dprocedimento
Rule 37    Instrucao -> Bloco
Rule 38    ParteElse -> ELSE Instrucao
Rule 39    ParteElse -> <empty>
Rule 40    BufferVar -> BufferVar Dvariaveis
Rule 41    BufferVar -> <empty>
Rule 42    CicloFor -> FOR Atribuicao DirecaoFor Expressao DO Instrucao
Rule 43    GlobalInst -> Dvariaveis
Rule 44    Bloco -> BEGIN LocalInstsList END
Rule 45    Termo -> Termo * Fator
Rule 46    Termo -> Termo MOD Fator
Rule 47    Termo -> Termo DIV Fator
Rule 48    BlocoPrincipal -> BEGIN LocalInstsList END
Rule 49    FuncDec -> Cabeca ArgumentosSetter : Tipo ;
Rule 50    Variaveis -> Variaveis , ID
Rule 51    Variaveis -> ID
Rule 52    Variavel_array -> ID
Rule 53    Variavel_array -> Acesso_array
Rule 54    Tipo -> Datatype
Rule 55    Tipo -> ARRAY [ Intervalo ] OF Datatype
Rule 56    Tipo -> ID
Rule 57    Cabeca -> FUNCTION ID
Rule 58    Termo -> Fator
Rule 59    Dprocedimento -> PROCEDURE ID ArgumentosProcedimentoOpc ; GlobalInsts BEGIN LocalInstsList END ;
Rule 60    Intervalo -> INTEGER . . INTEGER
Rule 61    Fator -> ID
Rule 62    ArgumentosProcedimentoOpc -> ArgumentosSetter
Rule 63    ArgumentosProcedimentoOpc -> <empty>
Rule 64    Datatype -> REAL_TYPE
Rule 65    Datatype -> INTEGER_TYPE
Rule 66    Datatype -> STRING_TYPE
Rule 67    Datatype -> BOOLEAN_TYPE
Rule 68    Datatype -> CHAR_TYPE
Rule 69    ArgumentosGetter -> ( ArgumentosGetterInit )
Rule 70    Fator -> INTEGER
Rule 71    SimboloCondicional -> =
Rule 72    SimboloCondicional -> DIFFERENT
Rule 73    SimboloCondicional -> LESSOREQUAL
Rule 74    SimboloCondicional -> <
Rule 75    SimboloCondicional -> GREATEROREQUAL
Rule 76    SimboloCondicional -> >
Rule 77    Fator -> REAL
Rule 78    ArgumentosGetterInit -> ArgumentosGetterBuffer Expressao
Rule 79    ArgumentosGetterInit -> <empty>
Rule 80    Fator -> STRING
Rule 81    Fator -> TRUE
Rule 82    ArgumentosGetterBuffer -> ArgumentosGetterBuffer Expressao ,
Rule 83    ArgumentosGetterBuffer -> <empty>
Rule 84    Fator -> FALSE
Rule 85    Atribuido -> ID
Rule 86    Atribuido -> Acesso_array
Rule 87    ArgumentosSetter -> ( ArgumentosSetterBuffer )
Rule 88    Fator -> ( Expressao )
Rule 89    DirecaoFor -> TO
Rule 90    DirecaoFor -> DOWNTO
Rule 91    Fator -> Acesso_array
Rule 92    Fator -> ChamadaFuncao
Rule 93    ArgumentosSetterBuffer -> ArgumentosSetterBuffer , Argumento
Rule 94    ArgumentosSetterBuffer -> Argumento
Rule 95    ArgumentosSetterBuffer -> <empty>
Rule 96    Argumento -> OutrosArgumentos ID : Tipo
Rule 97    OutrosArgumentos -> OutrosArgumentos ID ,
Rule 98    OutrosArgumentos -> <empty>
Rule 99    ChamadaFuncao -> ID ArgumentosGetter
Rule 100   ArgumentosGetter -> ( ListaArgumentos )
Rule 101   ArgumentosGetter -> ( )
Rule 102   ListaArgumentos -> ListaArgumentos , Expressao
Rule 103   ListaArgumentos -> Expressao

Terminals, with rules where they appear

(                    : 5 69 87 88 100 101
)                    : 5 69 87 88 100 101
*                    : 45
+                    : 11
,                    : 20 50 82 93 97 102
-                    : 12
.                    : 8 60 60
:                    : 18 49 96
;                    : 6 8 9 16 17 18 49 59 59
<                    : 74
=                    : 71
>                    : 76
AND                  : 1
ARRAY                : 55
ASSIGN               : 15
BEGIN                : 16 44 48 59
BOOLEAN_TYPE         : 67
CASE                 : 
CHAR_TYPE            : 68
CONST                : 
DIFFERENT            : 72
DIV                  : 47
DO                   : 22 42
DOWNTO               : 90
ELSE                 : 38
END                  : 16 44 48 59
FALSE                : 84
FILE                 : 
FOR                  : 42
FUNCTION             : 57
GOTO                 : 
GREATEROREQUAL       : 75
ID                   : 8 20 21 50 51 52 56 57 59 61 85 96 97 99
IF                   : 13
IN                   : 
INTEGER              : 60 60 70
INTEGER_TYPE         : 65
KEYWORD              : 
LABEL                : 
LESSOREQUAL          : 73
MOD                  : 46
MULTILINECOMMENTS    : 
NIL                  : 
NOT                  : 3
OF                   : 55
ONELINECOMMENTS      : 
OR                   : 2
PACKED               : 
PROCEDURE            : 59
PROGRAM              : 8
REAL                 : 77
REAL_TYPE            : 64
RECORD               : 
REPEAT               : 
SET                  : 
STRING               : 80
STRING_TYPE          : 66
THEN                 : 13
TO                   : 89
TRUE                 : 81
TYPE                 : 
UNTIL                : 
USES                 : 9
VAR                  : 7
WHILE                : 22
WITH                 : 
[                    : 14 55
]                    : 14 55
error                : 

Nonterminals, with rules where they appear

Acesso_array         : 53 86 91
Argumento            : 93 94
ArgumentosGetter     : 99
ArgumentosGetterBuffer : 78 82
ArgumentosGetterInit : 69
ArgumentosProcedimentoOpc : 59
ArgumentosSetter     : 49 62
ArgumentosSetterBuffer : 87 93
Atribuicao           : 27 42
Atribuido            : 15
Bloco                : 37
BlocoCondicional     : 13
BlocoPrincipal       : 8
BufferVar            : 16 40
Cabeca               : 49
ChamadaFuncao        : 92
CicloFor             : 25
Condicao             : 1 1 2 2 3 5 13 22
Datatype             : 54 55
DeclaracaoCondicao   : 4
Dfuncao              : 35
DirecaoFor           : 42
Dprocedimento        : 36
Duses                : 8
Dvariaveis           : 40 43
Expressao            : 11 12 14 15 28 31 31 32 42 78 82 88 102 103
Fator                : 45 46 47 58
FuncDec              : 16
GlobalInst           : 29
GlobalInsts          : 8 29 59
Instrucao            : 6 22 23 33 38 42
InstrucaoCondicional : 26
Intervalo            : 55
ListaArgumentos      : 100 102
Listavariaveis       : 7 18
LocalInstsList       : 6 16 17 44 48 59
OutrosArgumentos     : 96 97
ParteElse            : 13
Programa             : 0
SimboloCondicional   : 31
Termo                : 11 12 34 45 46 47
Tipo                 : 18 49 96
UseList              : 9 20
Variaveis            : 18 50
Variavel_array       : 14
While                : 24

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (8) Programa -> . PROGRAM ID ; Duses GlobalInsts BlocoPrincipal .

    PROGRAM         shift and go to state 2

    Programa                       shift and go to state 1

state 1

    (0) S' -> Programa .



state 2

    (8) Programa -> PROGRAM . ID ; Duses GlobalInsts BlocoPrincipal .

    ID              shift and go to state 3


state 3

    (8) Programa -> PROGRAM ID . ; Duses GlobalInsts BlocoPrincipal .

    ;               shift and go to state 4


state 4

    (8) Programa -> PROGRAM ID ; . Duses GlobalInsts BlocoPrincipal .
    (9) Duses -> . USES UseList ;
    (10) Duses -> .

    USES            shift and go to state 6
    BEGIN           reduce using rule 10 (Duses -> .)
    PROCEDURE       reduce using rule 10 (Duses -> .)
    VAR             reduce using rule 10 (Duses -> .)
    FUNCTION        reduce using rule 10 (Duses -> .)

    Duses                          shift and go to state 5

state 5

    (8) Programa -> PROGRAM ID ; Duses . GlobalInsts BlocoPrincipal .
    (29) GlobalInsts -> . GlobalInsts GlobalInst
    (30) GlobalInsts -> .

    BEGIN           reduce using rule 30 (GlobalInsts -> .)
    PROCEDURE       reduce using rule 30 (GlobalInsts -> .)
    VAR             reduce using rule 30 (GlobalInsts -> .)
    FUNCTION        reduce using rule 30 (GlobalInsts -> .)

    GlobalInsts                    shift and go to state 7

state 6

    (9) Duses -> USES . UseList ;
    (20) UseList -> . UseList , ID
    (21) UseList -> . ID

    ID              shift and go to state 9

    UseList                        shift and go to state 8

state 7

    (8) Programa -> PROGRAM ID ; Duses GlobalInsts . BlocoPrincipal .
    (29) GlobalInsts -> GlobalInsts . GlobalInst
    (48) BlocoPrincipal -> . BEGIN LocalInstsList END
    (35) GlobalInst -> . Dfuncao
    (36) GlobalInst -> . Dprocedimento
    (43) GlobalInst -> . Dvariaveis
    (16) Dfuncao -> . FuncDec BufferVar BEGIN LocalInstsList END ;
    (59) Dprocedimento -> . PROCEDURE ID ArgumentosProcedimentoOpc ; GlobalInsts BEGIN LocalInstsList END ;
    (7) Dvariaveis -> . VAR Listavariaveis
    (49) FuncDec -> . Cabeca ArgumentosSetter : Tipo ;
    (57) Cabeca -> . FUNCTION ID

    BEGIN           shift and go to state 12
    PROCEDURE       shift and go to state 17
    VAR             shift and go to state 18
    FUNCTION        shift and go to state 20

    BlocoPrincipal                 shift and go to state 10
    GlobalInst                     shift and go to state 11
    Dfuncao                        shift and go to state 13
    Dprocedimento                  shift and go to state 14
    Dvariaveis                     shift and go to state 15
    FuncDec                        shift and go to state 16
    Cabeca                         shift and go to state 19

state 8

    (9) Duses -> USES UseList . ;
    (20) UseList -> UseList . , ID

    ;               shift and go to state 21
    ,               shift and go to state 22


state 9

    (21) UseList -> ID .

    ;               reduce using rule 21 (UseList -> ID .)
    ,               reduce using rule 21 (UseList -> ID .)


state 10

    (8) Programa -> PROGRAM ID ; Duses GlobalInsts BlocoPrincipal . .

    .               shift and go to state 23


state 11

    (29) GlobalInsts -> GlobalInsts GlobalInst .

    BEGIN           reduce using rule 29 (GlobalInsts -> GlobalInsts GlobalInst .)
    PROCEDURE       reduce using rule 29 (GlobalInsts -> GlobalInsts GlobalInst .)
    VAR             reduce using rule 29 (GlobalInsts -> GlobalInsts GlobalInst .)
    FUNCTION        reduce using rule 29 (GlobalInsts -> GlobalInsts GlobalInst .)


state 12

    (48) BlocoPrincipal -> BEGIN . LocalInstsList END
    (6) LocalInstsList -> . LocalInstsList ; Instrucao
    (17) LocalInstsList -> . LocalInstsList ;
    (23) LocalInstsList -> . Instrucao
    (24) Instrucao -> . While
    (25) Instrucao -> . CicloFor
    (26) Instrucao -> . InstrucaoCondicional
    (27) Instrucao -> . Atribuicao
    (28) Instrucao -> . Expressao
    (37) Instrucao -> . Bloco
    (22) While -> . WHILE Condicao DO Instrucao
    (42) CicloFor -> . FOR Atribuicao DirecaoFor Expressao DO Instrucao
    (13) InstrucaoCondicional -> . IF Condicao THEN BlocoCondicional ParteElse
    (15) Atribuicao -> . Atribuido ASSIGN Expressao
    (11) Expressao -> . Expressao + Termo
    (12) Expressao -> . Expressao - Termo
    (34) Expressao -> . Termo
    (44) Bloco -> . BEGIN LocalInstsList END
    (85) Atribuido -> . ID
    (86) Atribuido -> . Acesso_array
    (45) Termo -> . Termo * Fator
    (46) Termo -> . Termo MOD Fator
    (47) Termo -> . Termo DIV Fator
    (58) Termo -> . Fator
    (14) Acesso_array -> . Variavel_array [ Expressao ]
    (61) Fator -> . ID
    (70) Fator -> . INTEGER
    (77) Fator -> . REAL
    (80) Fator -> . STRING
    (81) Fator -> . TRUE
    (84) Fator -> . FALSE
    (88) Fator -> . ( Expressao )
    (91) Fator -> . Acesso_array
    (92) Fator -> . ChamadaFuncao
    (52) Variavel_array -> . ID
    (53) Variavel_array -> . Acesso_array
    (99) ChamadaFuncao -> . ID ArgumentosGetter

    WHILE           shift and go to state 33
    FOR             shift and go to state 34
    IF              shift and go to state 35
    BEGIN           shift and go to state 24
    ID              shift and go to state 38
    INTEGER         shift and go to state 42
    REAL            shift and go to state 43
    STRING          shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46
    (               shift and go to state 47

    LocalInstsList                 shift and go to state 25
    Instrucao                      shift and go to state 26
    While                          shift and go to state 27
    CicloFor                       shift and go to state 28
    InstrucaoCondicional           shift and go to state 29
    Atribuicao                     shift and go to state 30
    Expressao                      shift and go to state 31
    Bloco                          shift and go to state 32
    Atribuido                      shift and go to state 36
    Termo                          shift and go to state 37
    Acesso_array                   shift and go to state 39
    Fator                          shift and go to state 40
    Variavel_array                 shift and go to state 41
    ChamadaFuncao                  shift and go to state 48

state 13

    (35) GlobalInst -> Dfuncao .

    BEGIN           reduce using rule 35 (GlobalInst -> Dfuncao .)
    PROCEDURE       reduce using rule 35 (GlobalInst -> Dfuncao .)
    VAR             reduce using rule 35 (GlobalInst -> Dfuncao .)
    FUNCTION        reduce using rule 35 (GlobalInst -> Dfuncao .)


state 14

    (36) GlobalInst -> Dprocedimento .

    BEGIN           reduce using rule 36 (GlobalInst -> Dprocedimento .)
    PROCEDURE       reduce using rule 36 (GlobalInst -> Dprocedimento .)
    VAR             reduce using rule 36 (GlobalInst -> Dprocedimento .)
    FUNCTION        reduce using rule 36 (GlobalInst -> Dprocedimento .)


state 15

    (43) GlobalInst -> Dvariaveis .

    BEGIN           reduce using rule 43 (GlobalInst -> Dvariaveis .)
    PROCEDURE       reduce using rule 43 (GlobalInst -> Dvariaveis .)
    VAR             reduce using rule 43 (GlobalInst -> Dvariaveis .)
    FUNCTION        reduce using rule 43 (GlobalInst -> Dvariaveis .)


state 16

    (16) Dfuncao -> FuncDec . BufferVar BEGIN LocalInstsList END ;
    (40) BufferVar -> . BufferVar Dvariaveis
    (41) BufferVar -> .

    BEGIN           reduce using rule 41 (BufferVar -> .)
    VAR             reduce using rule 41 (BufferVar -> .)

    BufferVar                      shift and go to state 49

state 17

    (59) Dprocedimento -> PROCEDURE . ID ArgumentosProcedimentoOpc ; GlobalInsts BEGIN LocalInstsList END ;

    ID              shift and go to state 50


state 18

    (7) Dvariaveis -> VAR . Listavariaveis
    (18) Listavariaveis -> . Listavariaveis Variaveis : Tipo ;
    (19) Listavariaveis -> .

    ID              reduce using rule 19 (Listavariaveis -> .)
    BEGIN           reduce using rule 19 (Listavariaveis -> .)
    PROCEDURE       reduce using rule 19 (Listavariaveis -> .)
    VAR             reduce using rule 19 (Listavariaveis -> .)
    FUNCTION        reduce using rule 19 (Listavariaveis -> .)

    Listavariaveis                 shift and go to state 51

state 19

    (49) FuncDec -> Cabeca . ArgumentosSetter : Tipo ;
    (87) ArgumentosSetter -> . ( ArgumentosSetterBuffer )

    (               shift and go to state 53

    ArgumentosSetter               shift and go to state 52

state 20

    (57) Cabeca -> FUNCTION . ID

    ID              shift and go to state 54


state 21

    (9) Duses -> USES UseList ; .

    BEGIN           reduce using rule 9 (Duses -> USES UseList ; .)
    PROCEDURE       reduce using rule 9 (Duses -> USES UseList ; .)
    VAR             reduce using rule 9 (Duses -> USES UseList ; .)
    FUNCTION        reduce using rule 9 (Duses -> USES UseList ; .)


state 22

    (20) UseList -> UseList , . ID

    ID              shift and go to state 55


state 23

    (8) Programa -> PROGRAM ID ; Duses GlobalInsts BlocoPrincipal . .

    $end            reduce using rule 8 (Programa -> PROGRAM ID ; Duses GlobalInsts BlocoPrincipal . .)


state 24

    (44) Bloco -> BEGIN . LocalInstsList END
    (6) LocalInstsList -> . LocalInstsList ; Instrucao
    (17) LocalInstsList -> . LocalInstsList ;
    (23) LocalInstsList -> . Instrucao
    (24) Instrucao -> . While
    (25) Instrucao -> . CicloFor
    (26) Instrucao -> . InstrucaoCondicional
    (27) Instrucao -> . Atribuicao
    (28) Instrucao -> . Expressao
    (37) Instrucao -> . Bloco
    (22) While -> . WHILE Condicao DO Instrucao
    (42) CicloFor -> . FOR Atribuicao DirecaoFor Expressao DO Instrucao
    (13) InstrucaoCondicional -> . IF Condicao THEN BlocoCondicional ParteElse
    (15) Atribuicao -> . Atribuido ASSIGN Expressao
    (11) Expressao -> . Expressao + Termo
    (12) Expressao -> . Expressao - Termo
    (34) Expressao -> . Termo
    (44) Bloco -> . BEGIN LocalInstsList END
    (85) Atribuido -> . ID
    (86) Atribuido -> . Acesso_array
    (45) Termo -> . Termo * Fator
    (46) Termo -> . Termo MOD Fator
    (47) Termo -> . Termo DIV Fator
    (58) Termo -> . Fator
    (14) Acesso_array -> . Variavel_array [ Expressao ]
    (61) Fator -> . ID
    (70) Fator -> . INTEGER
    (77) Fator -> . REAL
    (80) Fator -> . STRING
    (81) Fator -> . TRUE
    (84) Fator -> . FALSE
    (88) Fator -> . ( Expressao )
    (91) Fator -> . Acesso_array
    (92) Fator -> . ChamadaFuncao
    (52) Variavel_array -> . ID
    (53) Variavel_array -> . Acesso_array
    (99) ChamadaFuncao -> . ID ArgumentosGetter

    WHILE           shift and go to state 33
    FOR             shift and go to state 34
    IF              shift and go to state 35
    BEGIN           shift and go to state 24
    ID              shift and go to state 38
    INTEGER         shift and go to state 42
    REAL            shift and go to state 43
    STRING          shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46
    (               shift and go to state 47

    LocalInstsList                 shift and go to state 56
    Instrucao                      shift and go to state 26
    While                          shift and go to state 27
    CicloFor                       shift and go to state 28
    InstrucaoCondicional           shift and go to state 29
    Atribuicao                     shift and go to state 30
    Expressao                      shift and go to state 31
    Bloco                          shift and go to state 32
    Atribuido                      shift and go to state 36
    Termo                          shift and go to state 37
    Acesso_array                   shift and go to state 39
    Fator                          shift and go to state 40
    Variavel_array                 shift and go to state 41
    ChamadaFuncao                  shift and go to state 48

state 25

    (48) BlocoPrincipal -> BEGIN LocalInstsList . END
    (6) LocalInstsList -> LocalInstsList . ; Instrucao
    (17) LocalInstsList -> LocalInstsList . ;

    END             shift and go to state 57
    ;               shift and go to state 58


state 26

    (23) LocalInstsList -> Instrucao .

    END             reduce using rule 23 (LocalInstsList -> Instrucao .)
    ;               reduce using rule 23 (LocalInstsList -> Instrucao .)


state 27

    (24) Instrucao -> While .

    END             reduce using rule 24 (Instrucao -> While .)
    ;               reduce using rule 24 (Instrucao -> While .)
    ELSE            reduce using rule 24 (Instrucao -> While .)


state 28

    (25) Instrucao -> CicloFor .

    END             reduce using rule 25 (Instrucao -> CicloFor .)
    ;               reduce using rule 25 (Instrucao -> CicloFor .)
    ELSE            reduce using rule 25 (Instrucao -> CicloFor .)


state 29

    (26) Instrucao -> InstrucaoCondicional .

    END             reduce using rule 26 (Instrucao -> InstrucaoCondicional .)
    ;               reduce using rule 26 (Instrucao -> InstrucaoCondicional .)
    ELSE            reduce using rule 26 (Instrucao -> InstrucaoCondicional .)


state 30

    (27) Instrucao -> Atribuicao .

    END             reduce using rule 27 (Instrucao -> Atribuicao .)
    ;               reduce using rule 27 (Instrucao -> Atribuicao .)
    ELSE            reduce using rule 27 (Instrucao -> Atribuicao .)


state 31

    (28) Instrucao -> Expressao .
    (11) Expressao -> Expressao . + Termo
    (12) Expressao -> Expressao . - Termo

    END             reduce using rule 28 (Instrucao -> Expressao .)
    ;               reduce using rule 28 (Instrucao -> Expressao .)
    ELSE            reduce using rule 28 (Instrucao -> Expressao .)
    +               shift and go to state 59
    -               shift and go to state 60


state 32

    (37) Instrucao -> Bloco .

    END             reduce using rule 37 (Instrucao -> Bloco .)
    ;               reduce using rule 37 (Instrucao -> Bloco .)
    ELSE            reduce using rule 37 (Instrucao -> Bloco .)


state 33

    (22) While -> WHILE . Condicao DO Instrucao
    (1) Condicao -> . Condicao AND Condicao
    (2) Condicao -> . Condicao OR Condicao
    (3) Condicao -> . NOT Condicao
    (4) Condicao -> . DeclaracaoCondicao
    (5) Condicao -> . ( Condicao )
    (31) DeclaracaoCondicao -> . Expressao SimboloCondicional Expressao
    (32) DeclaracaoCondicao -> . Expressao
    (11) Expressao -> . Expressao + Termo
    (12) Expressao -> . Expressao - Termo
    (34) Expressao -> . Termo
    (45) Termo -> . Termo * Fator
    (46) Termo -> . Termo MOD Fator
    (47) Termo -> . Termo DIV Fator
    (58) Termo -> . Fator
    (61) Fator -> . ID
    (70) Fator -> . INTEGER
    (77) Fator -> . REAL
    (80) Fator -> . STRING
    (81) Fator -> . TRUE
    (84) Fator -> . FALSE
    (88) Fator -> . ( Expressao )
    (91) Fator -> . Acesso_array
    (92) Fator -> . ChamadaFuncao
    (14) Acesso_array -> . Variavel_array [ Expressao ]
    (99) ChamadaFuncao -> . ID ArgumentosGetter
    (52) Variavel_array -> . ID
    (53) Variavel_array -> . Acesso_array

    NOT             shift and go to state 62
    (               shift and go to state 64
    ID              shift and go to state 66
    INTEGER         shift and go to state 42
    REAL            shift and go to state 43
    STRING          shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    Condicao                       shift and go to state 61
    DeclaracaoCondicao             shift and go to state 63
    Expressao                      shift and go to state 65
    Termo                          shift and go to state 37
    Fator                          shift and go to state 40
    Acesso_array                   shift and go to state 67
    ChamadaFuncao                  shift and go to state 48
    Variavel_array                 shift and go to state 41

state 34

    (42) CicloFor -> FOR . Atribuicao DirecaoFor Expressao DO Instrucao
    (15) Atribuicao -> . Atribuido ASSIGN Expressao
    (85) Atribuido -> . ID
    (86) Atribuido -> . Acesso_array
    (14) Acesso_array -> . Variavel_array [ Expressao ]
    (52) Variavel_array -> . ID
    (53) Variavel_array -> . Acesso_array

    ID              shift and go to state 69

    Atribuicao                     shift and go to state 68
    Atribuido                      shift and go to state 36
    Acesso_array                   shift and go to state 70
    Variavel_array                 shift and go to state 41

state 35

    (13) InstrucaoCondicional -> IF . Condicao THEN BlocoCondicional ParteElse
    (1) Condicao -> . Condicao AND Condicao
    (2) Condicao -> . Condicao OR Condicao
    (3) Condicao -> . NOT Condicao
    (4) Condicao -> . DeclaracaoCondicao
    (5) Condicao -> . ( Condicao )
    (31) DeclaracaoCondicao -> . Expressao SimboloCondicional Expressao
    (32) DeclaracaoCondicao -> . Expressao
    (11) Expressao -> . Expressao + Termo
    (12) Expressao -> . Expressao - Termo
    (34) Expressao -> . Termo
    (45) Termo -> . Termo * Fator
    (46) Termo -> . Termo MOD Fator
    (47) Termo -> . Termo DIV Fator
    (58) Termo -> . Fator
    (61) Fator -> . ID
    (70) Fator -> . INTEGER
    (77) Fator -> . REAL
    (80) Fator -> . STRING
    (81) Fator -> . TRUE
    (84) Fator -> . FALSE
    (88) Fator -> . ( Expressao )
    (91) Fator -> . Acesso_array
    (92) Fator -> . ChamadaFuncao
    (14) Acesso_array -> . Variavel_array [ Expressao ]
    (99) ChamadaFuncao -> . ID ArgumentosGetter
    (52) Variavel_array -> . ID
    (53) Variavel_array -> . Acesso_array

    NOT             shift and go to state 62
    (               shift and go to state 64
    ID              shift and go to state 66
    INTEGER         shift and go to state 42
    REAL            shift and go to state 43
    STRING          shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    Condicao                       shift and go to state 71
    DeclaracaoCondicao             shift and go to state 63
    Expressao                      shift and go to state 65
    Termo                          shift and go to state 37
    Fator                          shift and go to state 40
    Acesso_array                   shift and go to state 67
    ChamadaFuncao                  shift and go to state 48
    Variavel_array                 shift and go to state 41

state 36

    (15) Atribuicao -> Atribuido . ASSIGN Expressao

    ASSIGN          shift and go to state 72


state 37

    (34) Expressao -> Termo .
    (45) Termo -> Termo . * Fator
    (46) Termo -> Termo . MOD Fator
    (47) Termo -> Termo . DIV Fator

    +               reduce using rule 34 (Expressao -> Termo .)
    -               reduce using rule 34 (Expressao -> Termo .)
    END             reduce using rule 34 (Expressao -> Termo .)
    ;               reduce using rule 34 (Expressao -> Termo .)
    =               reduce using rule 34 (Expressao -> Termo .)
    DIFFERENT       reduce using rule 34 (Expressao -> Termo .)
    LESSOREQUAL     reduce using rule 34 (Expressao -> Termo .)
    <               reduce using rule 34 (Expressao -> Termo .)
    GREATEROREQUAL  reduce using rule 34 (Expressao -> Termo .)
    >               reduce using rule 34 (Expressao -> Termo .)
    DO              reduce using rule 34 (Expressao -> Termo .)
    AND             reduce using rule 34 (Expressao -> Termo .)
    OR              reduce using rule 34 (Expressao -> Termo .)
    THEN            reduce using rule 34 (Expressao -> Termo .)
    )               reduce using rule 34 (Expressao -> Termo .)
    TO              reduce using rule 34 (Expressao -> Termo .)
    DOWNTO          reduce using rule 34 (Expressao -> Termo .)
    ELSE            reduce using rule 34 (Expressao -> Termo .)
    ,               reduce using rule 34 (Expressao -> Termo .)
    ]               reduce using rule 34 (Expressao -> Termo .)
    *               shift and go to state 73
    MOD             shift and go to state 74
    DIV             shift and go to state 75


state 38

    (85) Atribuido -> ID .
    (61) Fator -> ID .
    (52) Variavel_array -> ID .
    (99) ChamadaFuncao -> ID . ArgumentosGetter
    (69) ArgumentosGetter -> . ( ArgumentosGetterInit )
    (100) ArgumentosGetter -> . ( ListaArgumentos )
    (101) ArgumentosGetter -> . ( )

    ASSIGN          reduce using rule 85 (Atribuido -> ID .)
    *               reduce using rule 61 (Fator -> ID .)
    MOD             reduce using rule 61 (Fator -> ID .)
    DIV             reduce using rule 61 (Fator -> ID .)
    +               reduce using rule 61 (Fator -> ID .)
    -               reduce using rule 61 (Fator -> ID .)
    END             reduce using rule 61 (Fator -> ID .)
    ;               reduce using rule 61 (Fator -> ID .)
    ELSE            reduce using rule 61 (Fator -> ID .)
    [               reduce using rule 52 (Variavel_array -> ID .)
    (               shift and go to state 77

    ArgumentosGetter               shift and go to state 76

state 39

    (86) Atribuido -> Acesso_array .
    (91) Fator -> Acesso_array .
    (53) Variavel_array -> Acesso_array .

    ASSIGN          reduce using rule 86 (Atribuido -> Acesso_array .)
    *               reduce using rule 91 (Fator -> Acesso_array .)
    MOD             reduce using rule 91 (Fator -> Acesso_array .)
    DIV             reduce using rule 91 (Fator -> Acesso_array .)
    +               reduce using rule 91 (Fator -> Acesso_array .)
    -               reduce using rule 91 (Fator -> Acesso_array .)
    END             reduce using rule 91 (Fator -> Acesso_array .)
    ;               reduce using rule 91 (Fator -> Acesso_array .)
    ELSE            reduce using rule 91 (Fator -> Acesso_array .)
    [               reduce using rule 53 (Variavel_array -> Acesso_array .)


state 40

    (58) Termo -> Fator .

    *               reduce using rule 58 (Termo -> Fator .)
    MOD             reduce using rule 58 (Termo -> Fator .)
    DIV             reduce using rule 58 (Termo -> Fator .)
    +               reduce using rule 58 (Termo -> Fator .)
    -               reduce using rule 58 (Termo -> Fator .)
    END             reduce using rule 58 (Termo -> Fator .)
    ;               reduce using rule 58 (Termo -> Fator .)
    =               reduce using rule 58 (Termo -> Fator .)
    DIFFERENT       reduce using rule 58 (Termo -> Fator .)
    LESSOREQUAL     reduce using rule 58 (Termo -> Fator .)
    <               reduce using rule 58 (Termo -> Fator .)
    GREATEROREQUAL  reduce using rule 58 (Termo -> Fator .)
    >               reduce using rule 58 (Termo -> Fator .)
    DO              reduce using rule 58 (Termo -> Fator .)
    AND             reduce using rule 58 (Termo -> Fator .)
    OR              reduce using rule 58 (Termo -> Fator .)
    THEN            reduce using rule 58 (Termo -> Fator .)
    )               reduce using rule 58 (Termo -> Fator .)
    TO              reduce using rule 58 (Termo -> Fator .)
    DOWNTO          reduce using rule 58 (Termo -> Fator .)
    ELSE            reduce using rule 58 (Termo -> Fator .)
    ,               reduce using rule 58 (Termo -> Fator .)
    ]               reduce using rule 58 (Termo -> Fator .)


state 41

    (14) Acesso_array -> Variavel_array . [ Expressao ]

    [               shift and go to state 78


state 42

    (70) Fator -> INTEGER .
